--- a/vertx-web/pom.xml
+++ b/vertx-web/pom.xml
@@ -12,6 +12,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>vertx-web</artifactId>
+  <version>3.3.3-websocket</version>
 
   <properties>
     <doc.skip>false</doc.skip>
@@ -57,7 +58,7 @@
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-hazelcast</artifactId>
-      <version>${project.version}</version>
+      <version>${project.parent.version}</version>
       <scope>test</scope>
     </dependency>
 
